--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- Create by : Ari & Selamat -->
     <string name="app_name"></string>
     <string-array name="android_layout_arrays">
         <item>Jenis Kelamin</item>
